--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -25,6 +25,38 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "${PGADMIN_EXPOSED_PORT}:80"
-    volumes:
-      - ./conf/servers.json:/tmp/servers.json
-      - ./conf/preferences.json:/tmp/preferences.json
+    configs:
+      - source: servers.json
+        target: /pgadmin4/servers.json
+      - source: preferences.json
+        target: /pgadmin4/preferences.json
+
+configs:
+  preferences.json:
+    content: |
+      {
+        "preferences": {
+          "misc:themes:theme": "dark",
+          "browser:display:show_system_objects": true,
+          "browser:display:confirm_on_refresh_close": false,
+          "browser:display:show_user_defined_templates": true
+        }
+      }
+  servers.json:
+    content: |
+      {
+        "Servers": {
+          "1": {
+            "Group": "Servers",
+            "Name": "Database name",
+            "Host": "postgres",
+            "Port": 5432,
+            "MaintenanceDB": "db-name",
+            "Username": "username",
+            "SSLMode": "prefer",
+            "BGColor": "#FF4500",
+            "FGColor": "#222222",
+            "Comment": "This server will connect to the instance we've created in our compose file."
+          }
+        }
+      }
