--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -24,7 +24,7 @@ services:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
-      - "${PGADMIN_EXPOSED_PORT}:80"
+      - ${PGADMIN_EXPOSED_PORT}:80
     configs:
       - source: servers.json
         target: /pgadmin4/servers.json
@@ -56,6 +56,7 @@ configs:
             "SSLMode": "prefer",
             "BGColor": "#FF4500",
             "FGColor": "#222222",
+            "PassFile": "/pgpass",
             "Comment": "This server will connect to the instance we've created in our compose file."
           }
         }
