chore: reuse `.env` inside `server.json`

--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -51,8 +51,8 @@ configs:
             "Name": "Database name",
             "Host": "postgres",
             "Port": 5432,
-            "MaintenanceDB": "db-name",
-            "Username": "username",
+            "MaintenanceDB": "${POSTGRES_DB}",
+            "Username": "${POSTGRES_USER}",
             "SSLMode": "prefer",
             "BGColor": "#FF4500",
             "FGColor": "#222222",
