--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "${POSTGRESQL_EXPOSED_PORT}:5432"
     volumes:
-      - /data/postgres:/data/postgres
+      - postgres:${PGDATA}
     env_file:
       - .env
     healthcheck:
@@ -60,3 +60,6 @@ configs:
           }
         }
       }
+
+volumes:
+  postgres:
