fix: pgadmin default server connect to postgres

--- a/docker-compose-files/postgres/postgres-pgadmin/configs/servers.config.json
+++ b/docker-compose-files/postgres/postgres-pgadmin/configs/servers.config.json
@@ -3,7 +3,7 @@
     "1": {
       "Group": "Servers",
       "Name": "Database name",
-      "Host": "postgres",
+      "Host": "localhost",
       "Port": 5432,
       "MaintenanceDB": "db-name",
       "Username": "username",
