chore: add mocking for multiple example

--- a/docker-compose-files/grpc-mock/compose.yml
+++ b/docker-compose-files/grpc-mock/compose.yml
@@ -1,5 +1,7 @@
+# Registers all the mocks and protobuf files in one go
+
 services:
-  mocked-sample-service:
+  mocked-services:
     image: tkpd/gripmock
     ports:
       - "4770:4770"
