--- a/docker-compose-files/minio/apps/bidirectional-grpc-file-upload-e2e/tsconfig.json
+++ b/docker-compose-files/minio/apps/bidirectional-grpc-file-upload-e2e/tsconfig.json
@@ -5,9 +5,13 @@
   "references": [
     {
       "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "../../libs/shared"
     }
   ],
   "compilerOptions": {
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "module": "NodeNext"
   }
 }
