--- a/docker-compose-files/minio/apps/bidirectional-grpc-file-upload/project.json
+++ b/docker-compose-files/minio/apps/bidirectional-grpc-file-upload/project.json
@@ -41,7 +41,8 @@
             }
           }
         }
-      }
+      },
+      "parallelism": false
     },
     "serve": {
       "executor": "@nx/js:node",
@@ -58,11 +59,40 @@
         "production": {
           "buildTarget": "bidirectional-grpc-file-upload:build:production"
         }
-      }
+      },
+      "parallelism": false
     },
     "test": {
       "options": {
         "passWithNoTests": true
+      }
+    },
+    "compose:up": {
+      "executor": "nx:run-commands",
+      "parallelism": false,
+      "cache": false,
+      "options": {
+        "commands": [
+          {
+            "command": "docker compose up -d",
+            "forwardAllArgs": true
+          }
+        ],
+        "cwd": "{workspaceRoot}"
+      }
+    },
+    "compose:down": {
+      "executor": "nx:run-commands",
+      "parallelism": false,
+      "cache": false,
+      "options": {
+        "commands": [
+          {
+            "command": "docker compose down",
+            "forwardAllArgs": true
+          }
+        ],
+        "cwd": "{workspaceRoot}"
       }
     }
   }
