--- a/docker-compose-files/minio/apps/bidirectional-grpc-file-upload/tsconfig.app.json
+++ b/docker-compose-files/minio/apps/bidirectional-grpc-file-upload/tsconfig.app.json
@@ -1,14 +1,17 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "NodeNext",
-    "types": ["node"]
+    "types": ["node"],
+    "esModuleInterop": true,
+    "rootDir": "src"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*"],
   "exclude": [
     "jest.config.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.ts"
-  ]
+  ],
+  "references": []
 }
