--- a/docker-compose-files/minio/nx.json
+++ b/docker-compose-files/minio/nx.json
@@ -34,6 +34,20 @@
         "targetName": "test"
       },
       "exclude": ["apps/bidirectional-grpc-file-upload-e2e/**/*"]
+    },
+    {
+      "plugin": "@nx/js/typescript",
+      "options": {
+        "typecheck": {
+          "targetName": "typecheck"
+        },
+        "build": {
+          "targetName": "build",
+          "configName": "tsconfig.lib.json",
+          "buildDepsName": "build-deps",
+          "watchDepsName": "watch-deps"
+        }
+      }
     }
   ]
 }
