chore: cleanup by moving the nodejs app into a dir

--- a/docker-compose-files/minio/nodejs-app/libs/shared/package.json
+++ b/docker-compose-files/minio/nodejs-app/libs/shared/package.json
@@ -5,7 +5,10 @@
   "type": "commonjs",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
-  "dependencies": {},
+  "dependencies": {
+    "@grpc/grpc-js": "^1.12.6",
+    "@aws-sdk/client-s3": "^3.744.0"
+  },
   "exports": {
     ".": {
       "types": "./src/index.ts",
