--- a/docker-compose-files/rabbitmq/compose.yml
+++ b/docker-compose-files/rabbitmq/compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - rabbitmq:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:15672"]
+      test: python3 -c "import urllib.request, sys; sys.exit(urllib.request.urlopen('http://localhost:15672').status != 200)"
       interval: 30s
       timeout: 10s
       retries: 5
