--- a/docs/python-multiprocessing-logs/Dockerfile
+++ b/docs/python-multiprocessing-logs/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y make && rm -rf /var/lib/apt/lists/*
 
-COPY Makefile ./
+COPY Makefile .
 
 FROM base AS dev
 
