chore: map log files to stdout & stderr

--- a/docs/python-multiprocessing-logs/Dockerfile
+++ b/docs/python-multiprocessing-logs/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y make && rm -rf /var/lib/apt/lists/*
 
 COPY Makefile .
+COPY tail-logs.sh .
 
 FROM base AS dev
 
