chore: add transaction to MongoDB playground

--- a/docker-compose-files/mongodb/playground/Dockerfile
+++ b/docker-compose-files/mongodb/playground/Dockerfile
@@ -3,6 +3,9 @@ WORKDIR app
 COPY package*.json ./
 RUN npm install
 
+from base AS development
+CMD ["npm", "run", "start:dev"]
+
 FROM base AS production
 COPY . .
 CMD ["npm", "run", "start"]
