--- a/docker-compose-files/mongodb/playground/package.json
+++ b/docker-compose-files/mongodb/playground/package.json
@@ -4,9 +4,15 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:dev": "nodemon index.js",
+    "format": "prettier . -w -u"
   },
   "dependencies": {
     "mongoose": "^9.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11",
+    "prettier": "^3.8.1"
   }
 }
