--- a/docker-compose-files/mongodb/playground/package.json
+++ b/docker-compose-files/mongodb/playground/package.json
@@ -9,7 +9,8 @@
     "format": "prettier . -w -u"
   },
   "dependencies": {
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
